# aspeed-rust

./: Cargo.toml  README.md  build.rs  firmware.map  link.x  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/: rust-toolchain.toml
.github/workflows/: build-test.yml
scripts/: ecdsa_gen.py  gen_uart_booting_image.sh  rsa_test_vec_gen.py
src/: astdebug.rs  common.rs  controller.rs  digest.rs  ecdsa.rs  gpio.rs  hace_controller.rs  hash.rs  hash_new.rs  hash_test.rs  hmac.rs  i2c.rs  lib.rs  main.rs  pinctrl.rs  rsa.rs  spimonitor.rs  syscon.rs  timer.rs  uart.rs  watchdog.rs
src/i2c/: ast1060_i2c.rs  common.rs  hal_1.rs  i2c.rs  i2c_controller.rs  i2ccontroller.rs  mod.rs
src/i2c/pfr/: mod.rs  swmbx.rs
src/spi/: astdebug.rs  device.rs  fmccontroller.rs  mod.rs  norflash.rs  norflashblockdevice.rs  spicontroller.rs  spitest.rs
src/tests/: mod.rs
src/tests/functional/: ecdsa_test.rs  gpio_test.rs  hash_test.rs  hmac_test.rs  i2c_test.rs  mod.rs  rsa_test.rs  rsa_test_vec.rs  swmbx_test.rs  timer_test.rs
xtask/: Cargo.toml  README.md
xtask/.cargo/: config.toml
xtask/src/: build.rs  clippy.rs  docs.rs  format.rs  header.rs  main.rs  test.rs
