[package]
name = "aspeed-ddk"
version = "0.1.0"
edition = "2021"

[features]
std = []


[dependencies]
ast1060-pac = { git = "https://github.com/rusty1968/ast1060-pac.git", features = ["rt"] }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.6.5", features = ["device"] }
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations



