# Licensed under the Apache-2.0 license

[workspace]
members = ["xtask"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83.0"
[package]
name = "aspeed-ddk"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
i2c_target = []
test-rsa = []
test-ecdsa = []
test-hmac = []
test-hash = []
spi_dma = []
spi_dma_write = []
spi_monitor = []

[dependencies]
ast1060-pac = { git = "https://github.com/AspeedTech-BMC/ast1060-pac.git", features = ["rt"] }
embedded-hal = { version = "1.0.0" }
embedded-hal-old = { git = "https://github.com/rust-embedded/embedded-hal.git", rev = "599d44fdc7e709cb9ae6580ec11c0b7f7f102", package = "embedded-hal" }
embedded-io = "0.6.1"
fugit = "0.3.7"
base64ct = "<1.8.0"
proposed-traits = { git = "https://github.com/stevenlee7189/proposed_traits.git", package = "proposed-traits", rev = "496dba90a91aab8e4ae88bbaaa0e162df84ebe74" }
embedded-storage = "0.3"
hex-literal = "0.4"
heapless = "0.8.0"
paste = "1.0"

cortex-m = { version = "0.7.5" }
cortex-m-rt = { version = "0.6.5", features = ["device"] }
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

