# Licensed under the Apache-2.0 license

[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# Force xtask to always compile for the host target, not the default embedded target
[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.0"
once_cell = "1.19"
